Repaired Main Screen overflowing text bar

--- a/Chess_and_Checkers/style.css
+++ b/Chess_and_Checkers/style.css
@@ -52,7 +52,7 @@ div.main_buttons button:hover {
 
 button img {
     position: absolute;
-    top: 0;
+    top: 20px;
     left: -100%;
     width: 100%;
     height: 100%;
